--- a/switch.component.html
+++ b/switch.component.html
@@ -1,6 +1,6 @@
 <label class="w-switch">
 	<div class="w-switch__toggle">
-		<input class="w-switch__input" type="checkbox" [(ngModel)]="wngModel" (ngModelChange)="wngModelChange.emit(wngModel)">
+		<input class="w-switch__input" type="checkbox" [(ngModel)]="model" (ngModelChange)="modelChange.emit(model)">
 		<span class="w-switch__slider _round"></span>
 	</div>
 	<div class="w-switch__text">{{label}}</div>
