--- a/switch.component.scss
+++ b/switch.component.scss
@@ -1,103 +1,58 @@
-.switch {
-    background: #f00;
-    border: 1px solid #dfdfdf;
-    position: relative;
-    display: inline-block;
-    box-sizing: content-box;
-    overflow: visible;
-    padding: 0;
-    margin: 0;
+// SWITCH
+.w-switch {
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    box-shadow: rgb(223, 223, 223) 0 0 0 0 inset;
-    transition: 0.3s ease-out all;
-    -webkit-transition: 0.3s ease-out all;
-}
-small {
-    border-radius: 100%;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 0.3s ease-out all;
-    -webkit-transition: 0.3s ease-out all;
-}
-.switch-large {
-    width: 66px;
-    height: 40px;
-    border-radius: 40px;
-}
-.switch-large small {
-    width: 40px;
-    height: 40px;
-}
-.switch-medium {
-    width: 50px;
-    height: 30px;
-    border-radius: 30px;
-}
-.switch-medium.switch-labeled {
-      width: 60px;
-}
-.switch-medium small {
-    width: 30px;
-    height: 30px;
-}
-.switch-small {
-    width: 33px;
-    height: 20px;
-    border-radius: 20px;
-}
-.switch-small small {
-    width: 20px;
-    height: 20px;
-}
-.switch-labeled {
-      cursor: pointer;
-}
-.checked {
-    background: rgb(47, 207, 45);
-    border-color: rgb(47, 207, 45);
-}
-.switch-large.checked small {
-    left: 26px;
-}
-.switch-medium.checked small {
-    left: 20px;
-}
-.switch-medium.switch-labeled.checked small {
-      left: 30px;
-}
-.switch-small.checked small {
-    left: 13px;
-}
-.disabled {
-    opacity: .50;
-    cursor: not-allowed;
-}
-.switch .switch-text {
-      font-size: 13px;
-}
-.switch .off {
-      opacity: 1;
-      position: absolute;
-      right: 10%;
-      top: 25%;
-      z-index: 0;
-      color:#A9A9A9;
-      transition: 0.4s ease-out all;
-}
-.switch .on {
-      opacity:0;
-      z-index: 0;
-      color:#fff;
-      position: absolute;
-      top: 25%;
-      left: 9%;
-      transition: 0.4s ease-out all;
-}
-.switch.checked .off {
-      opacity:0;
-}
-.switch.checked .on {
-      opacity:1;
+    &__toggle {
+        position: relative;
+        width: 33px;
+        height: 20px;
+    }
+    &__input {
+        display: none;
+        &:checked+.w-switch__slider {
+            background-color: rgb(47, 207, 45);
+        }
+        &:focus+.w-switch__slider {
+            box-shadow: 0 0 1px var(--c-shadow);
+        }
+        &:checked+.w-switch__slider:before {
+            transform: translate(13px, -50%);
+            background-color: var(--c-white);
+        }
+    }
+    &__slider {
+        position: absolute;
+        inset: 0;
+        background-color: white;
+        border: 1px solid #dfdfdf;
+        outline: none;
+        transition: var(--transition);
+        &:before {
+            position: absolute;
+            content: "";
+            height: 19px;
+            width: 19px;
+            left: 0px;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: var(--c-white);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+            transition: var(--transition);
+        }
+        &._round {
+            border-radius: 34px;
+            border-color: #dfdfdf;
+            &:before {
+                border-radius: 50%;
+            }
+        }
+    }
+    &__text {
+        margin-left: 10px;
+        font-size: calc(#{var(--fs)} - 2px);
+        line-height: calc(#{var(--fs)} - 2px);
+        letter-spacing: var(--letter-spacing);
+        color: var(--c-text);
+    }
 }
