--- a/switch.component.html
+++ b/switch.component.html
@@ -1,4 +1,4 @@
-<label>
+<label class="w-switch">
 	<div class="w-switch__toggle">
 		<input class="w-switch__input" type="checkbox" [(ngModel)]="wngModel" (ngModelChange)="wngModelChange.emit(wngModel)">
 		<span class="w-switch__slider _round"></span>
