--- a/switch.component.scss
+++ b/switch.component.scss
@@ -4,47 +4,49 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+	padding: 10px 0;
+	&._disabled {
+		cursor: default;
+	}
     &__toggle {
         position: relative;
-        width: 33px;
-        height: 20px;
+        width: 45px;
+        height: 25px;
     }
     &__input {
         display: none;
         &:checked+.w-switch__slider {
-            transition-delay: 0.12s;
-            background-color: rgb(47, 207, 45);
+            background-color: var(--c-primary);
+            border: 1px solid var(--c-primary);
         }
         &:focus+.w-switch__slider {
             box-shadow: 0 0 1px var(--c-shadow);
         }
         &:checked+.w-switch__slider:before {
-            transform: translate(13px, -50%);
+            transform: translate(15px, -50%);
             background-color: var(--c-white);
         }
     }
     &__slider {
         position: absolute;
         inset: 0;
-        background-color: white;
-        border: 1px solid #dfdfdf;
+        background-color: var(--c-grey);
+        border: 1px solid var(--c-border);
         outline: none;
         transition: var(--transition);
         &:before {
             position: absolute;
             content: "";
-            height: 19px;
-            width: 19px;
-            left: 0px;
+            height: 16px;
+            width: 16px;
+            left: 6px;
             top: 50%;
             transform: translateY(-50%);
             background-color: var(--c-white);
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
             transition: var(--transition);
         }
         &._round {
             border-radius: 34px;
-            border-color: #dfdfdf;
             &:before {
                 border-radius: 50%;
             }
@@ -56,9 +58,8 @@
         line-height: calc(#{var(--fs)} - 2px);
         letter-spacing: var(--letter-spacing);
         color: var(--c-text);
-    }
-    .disabled {
-        opacity: .25;
-        cursor: not-allowed;
+		&._disabled {
+			opacity: 0.4;
+		}
     }
 }
